--- a/index_it.cbp
+++ b/index_it.cbp
@@ -33,6 +33,8 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="main.cpp" />
+		<Unit filename="parser.cpp" />
+		<Unit filename="parser.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
